===================
astroid's ChangeLog
===================

What's New in astroid 2.10.0?
=============================
Release date: TBA



What's New in astroid 2.9.1?
============================
Release date: TBA

* Require Python 3.6.2 to use astroid.

* Fix ``deque.insert()`` signature in ``collections`` brain.

  Closes #1260

* Fix typing and update explanation for ``Arguments.args`` being ``None``.

* Fix crash if a variable named ``type`` is subscripted in a generator expression.

  Closes PyCQA/pylint#5461


What's New in astroid 2.9.0?
============================
Release date: 2021-11-21

* Add ``end_lineno`` and ``end_col_offset`` attributes to astroid nodes.

* Always treat ``__class_getitem__`` as a classmethod.

* Add missing ``as_string`` visitor method for ``Unknown`` node.

  Closes #1264


What's New in astroid 2.8.6?
============================
Release date: 2021-11-21

* Fix crash on inference of subclasses created from ``Class().__subclasses__``

  Closes PyCQA/pylint#4982

* Fix bug with Python 3.7.0 / 3.7.1 and ``typing.NoReturn``.

  Closes #1239

* Resolve symlinks in the import path
  Fixes inference error when the import path includes symlinks (e.g. Python
  installed on macOS via Homebrew).

  Closes #823
  Closes PyCQA/pylint#3499
  Closes PyCQA/pylint#4302
  Closes PyCQA/pylint#4798
  Closes PyCQA/pylint#5081


What's New in astroid 2.8.5?
============================
Release date: 2021-11-12

* Use more permissive versions for the ``typed-ast`` dependency (<2.0 instead of <1.5)

  Closes #1237

* Fix crash on inference of ``__len__``.

  Closes PyCQA/pylint#5244

* Added missing ``kind`` (for ``Const``) and ``conversion`` (for ``FormattedValue``) fields to repr.

* Fix crash with assignment expressions, nested if expressions and filtering of statements

  Closes PyCQA/pylint#5178

* Fix incorrect filtering of assignment expressions statements


What's New in astroid 2.8.4?
============================
Release date: 2021-10-25
