@@ -12,6 +12,12 @@ What's New in astroid 2.9.1?
 ============================
 Release date: TBA
 
+* Prefer the module loader get_source() method in AstroidBuilder's
+  module_build() when possible to avoid assumptions about source
+  code being available on a filesystem.  Otherwise the source cannot
+  be found and application behavior changes when running within an
+  embedded hermetic interpreter environment (pyoxidizer, etc.).
+
 * Require Python 3.6.2 to use astroid.
 
 * Fix ``deque.insert()`` signature in ``collections`` brain.
